# team-tutorials-upstream

./: .gitignore  README.md  pyproject.toml
tt1/: integration.py  loops.py
tt2/: geometry.py  list_exercises.py  min_max.py
tt3/: README.txt  cfpb.py
tt4/: .pylintrc  README.txt  divvy.py  library.py  point.py  util.py
tt5/: README.txt  recursion.py
