[project]
name = "short-exercises"
version = "0.1.0"
description = "CAPP 121 A'25 Short Exercises"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipython>=8.27.0",
  "ruff>=0.6.4",
  "click>=7.0",
  "pytest>=3.9.1",
  "pytest_metadata>=1.7.0",
  "pytest_json>=0.4.0",
  "pytest-timeout>=1.3.2",
  "pylint>=2.13.6"
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]